[package]
name = "mwa_giant_squid"
version = "2.0.0"
authors = [
    "Christopher H. Jordan <christopherjordan87@gmail.com>",
    "Harrison Barlow <harrison.barlow@curtin.edu.au>",
    "Dev Null <dev.null@curtin.edu.au>",
    "Greg Sleap <greg.sleap@curtin.edu.au>",
]
edition = "2021"
rust-version = "1.71.1"
license = "MPL-2.0"
readme = "README.md"
description = "Alternative MWA ASVO client code"
repository = "https://github.com/MWATelescope/giant-squid"
homepage = "https://github.com/MWATelescope/giant-squid"
exclude = [".github/*"]

[features]
default = ["bin"]
bin = ["anyhow", "clap", "simplelog", "reqwest-retry", "task-local-extensions", "indicatif", "indicatif-log-bridge"]

[[bin]]
name = "giant-squid"
required-features = ["bin"]

[profile.release]
lto = "thin"
opt-level = 'z'  # Optimize for size.
panic = 'abort'

[dependencies]
backoff = "~0.4"
bytes = "1.9"
bytesize = "1.3"
log = "~0.4"
lazy_static = "1.5"
prettytable-rs = "~0.10"
reqwest = { version = "=0.12.12", default-features = false, features = ["blocking", "charset", "http2", "rustls-tls"] }
reqwest_cookie_store = { version = "=0.8.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "~0.10"
tar = "~0.4"
tee_readwrite = "~0.2"
thiserror = "2.0"
rayon = "1.10"
zerofrom = "=0.1.5"
litemap = "=0.7.4"

# Dependencies only for the binary.
anyhow = { version = "1.0", optional = true }
clap = { version = "~4.4", features = ["derive"], optional = true }
indicatif = { version = "~0.17", optional = true}
indicatif-log-bridge = {version = "0.2", optional = true}
reqwest-retry = { version = "=0.7.0", optional = true }
simplelog = { version = "~0.12", optional = true }
task-local-extensions = { version = "~0.1", optional = true }
time = { version = "~0.3", optional = true }
time-core = { version = "~0.1", optional = true }

[dev-dependencies]
tempfile = "3.17"

[build-dependencies]
built = "=0.7.6"
